[package]
name = "patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
git2 = { version = "0.18.1", default-features = false }
regex = "1.9.5"
rustc-hash = "1.1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
